--- a/properties.html
+++ b/properties.html
@@ -89,7 +89,7 @@ https://templatemo.com/tm-591-villa-agency
                         
                         <li>
                             <a href="#">
-                        <i class="fa fa-car" style="color: gold;"></i> Book a free site visit
+                        <i class="fa fa-car" style="color: #C8AA62;"></i> Book a free site visit
                             </a>
                         </li>
                     </ul>   
@@ -122,7 +122,7 @@ https://templatemo.com/tm-591-villa-agency
 <style>
   /* Page Heading Section */
 .page-heading {
-  background: linear-gradient(135deg, #0a1a33 0%, #b8860b 100%); /* Navy blue + gold blend */
+  background: linear-gradient(135deg, #0a1a33 0%, #C8AA62 100%); /* Navy blue + gold blend */
   color: #fff;
   padding: 80px 0 60px; /* Reduced height */
   position: relative;
@@ -139,7 +139,7 @@ https://templatemo.com/tm-591-villa-agency
 }
 
 .page-heading .breadcrumb {
-  color: #ffd700; /* gold breadcrumb text */
+  color: #C8AA62; /* gold breadcrumb text */
   font-size: 16px;
   font-weight: 500;
 }
@@ -151,7 +151,7 @@ https://templatemo.com/tm-591-villa-agency
 }
 
 .page-heading .breadcrumb a:hover {
-  color: #ffd700;
+  color: #C8AA62;
 }
 .property-overlay {
   text-align: center;
@@ -167,13 +167,13 @@ https://templatemo.com/tm-591-villa-agency
 }
 
 .property-location i {
-  color: #ff5a5f; /* red location icon */
+  color: #C8AA62; /* red location icon */
   margin-right: 6px;
 }
 
 .see-more {
   display: inline-block;
-  background: #d8db24;
+  background: #C8AA62;
   color: #fff;
   padding: 6px 14px;
   border-radius: 6px;
@@ -219,9 +219,9 @@ https://templatemo.com/tm-591-villa-agency
         <div class="property-box">
           <img src="assets/images/property-01.jpg" alt="Luxury Villa">
           <div class="property-overlay">
-            <h4>18 Old Street Miami</h4>
+            <h4>Highland Enclave</h4>
             <p class="property-location">
-              <i class="fa-solid fa-location-dot"></i> Miami, Florida
+              <i class="fa-solid fa-location-dot"></i> Kabusa, Abuja
             </p>
             <a href="property-details.html" class="see-more">See More</a>
           </div>
@@ -232,9 +232,9 @@ https://templatemo.com/tm-591-villa-agency
         <div class="property-box">
           <img src="assets/images/property-02.jpg" alt="Luxury Villa">
           <div class="property-overlay">
-            <h4>54 New Street Florida</h4>
+            <h4>Hutu Polo Golf Estate</h4>
             <p class="property-location">
-              <i class="fa-solid fa-location-dot"></i> Florida, USA
+              <i class="fa-solid fa-location-dot"></i> Airport Road Abuja
             </p>
             <a href="property-details.html" class="see-more">See More</a>
           </div>
@@ -245,9 +245,9 @@ https://templatemo.com/tm-591-villa-agency
         <div class="property-box">
           <img src="assets/images/property-03.jpg" alt="Luxury Villa">
           <div class="property-overlay">
-            <h4>26 Mid Street Portland</h4>
+            <h4>Highland City Estate</h4>
             <p class="property-location">
-              <i class="fa-solid fa-location-dot"></i> Portland, Oregon
+              <i class="fa-solid fa-location-dot"></i> Kabusa, Abuja
             </p>
             <a href="property-details.html" class="see-more">See More</a>
           </div>
