--- a/index.html
+++ b/index.html
@@ -260,17 +260,74 @@ h2 {
 
 
 <!-- Our Story Banner -->
-<section class="our-story split-layout" style="background-color: rgb(200, 235, 247);">
-  <div class="story-image-side">
-    <img src="assets/images/toptier.jpg" alt="Our Story" class="story-image">
-  </div>
-  <div class="story-text-side">
-    <div class="story-text">
-      <h2>Our Story</h2>
-      <p>
-        Toptier Realty began with a vision to redefine luxury real estate. 
-        Built on trust, excellence, and client satisfaction, we’ve become a leader in upscale real estate services — helping individuals and families find not just homes, but lifestyles.
-      </p>
+<section class="our-story" style="background-color: #10344d; padding: 60px 20px;">
+  <div class="container" style="
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 40px;
+      max-width: 1200px;
+      margin: auto;
+  ">
+    
+    <!-- Image Side -->
+    <div class="story-image-side" style="
+        flex: 1 1 400px;
+        display: flex;
+        justify-content: center;
+    ">
+      <div style="
+          background: #fff;
+          border-radius: 15px;
+          box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+          padding: 10px;
+          max-width: 420px;
+      ">
+        <img src="assets/images/ourstorypics1.jpg" alt="Our Story" style="
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            object-fit: cover;
+        ">
+      </div>
+    </div>
+
+    <!-- Text Side -->
+    <div class="story-text-side" style="
+        flex: 1 1 500px;
+        background: #fff;
+        padding: 30px 35px;
+        border-radius: 15px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    ">
+      <div class="story-text" style="text-align: justify; color: #10344d;">
+        <h2 style="color: #10344d; font-weight: 700; margin-bottom: 15px;">Our Story</h2>
+        <p>
+         Top-Tier Realty was born from a powerful belief: real estate should be a trusted
+          and stress-free experience not just a transaction.
+          <br>
+​In an industry often clouded by uncertainty, we set out to 
+create a brand that truly puts people first.
+<br>
+ Our mission is simple:
+ to redefine your real estate journey through personalized service, smart solutions,
+  and unwavering integrity.<br>
+​For us, it's about more than property; it’s about helping you build the life you envision. 
+When you work with us, you gain a dedicated team committed to making your milestone smooth,
+ rewarding, and successful.
+        </p>
+
+
+        <br>
+        <hr>
+       
+      <h2 style="color: #10344d; font-weight: 700; margin-bottom: 15px;">Our promise</h2>
+ <p>
+To deliver upscale value and service through every experience, empowering 
+our clients with confidence and peace of mind in every property decision.
+        </p>
+      </div>
     </div>
   </div>
 </section>
@@ -490,7 +547,7 @@ We develop some properties ourselves, we also partner with other trusted develop
 <section class="stats-section">
   <div class="stat-box">
     <div class="stat-icon"><i class="fas fa-smile"></i></div>
-    <div class="stat-number" data-target="100">0</div>
+    <div class="stat-number" data-target="50">0</div>
     <div class="stat-label">Happy Clients</div>
   </div>
 
