--- a/properties.html
+++ b/properties.html
@@ -236,7 +236,7 @@ https://templatemo.com/tm-591-villa-agency
             <p class="property-location">
               <i class="fa-solid fa-location-dot"></i> Airport Road Abuja
             </p>
-            <a href="property-details.html" class="see-more">See More</a>
+            <a href="hutupologolf.html" class="see-more">See More</a>
           </div>
         </div>
       </div>
