--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Top-tier Realty - Real Estate Company</title>
+    <title>Top-Tier Realty - Real Estate Company</title>
+
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/toptier.jpg">
+<link rel="apple-touch-icon" href="assets/images/toptier.jpg">
+<link rel="shortcut icon" href="assets/images/toptier.jpg">
+
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -215,6 +220,7 @@ h2 {
                         <li><a href="index.html">Home</a></li>
                         <li><a href="properties.html" class="active">Properties</a></li>
                         <li><a href="third-party.html">Our Third Party Properties</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                            <li>
                             <a href="#">
@@ -236,7 +242,7 @@ h2 {
  <!-- ***** video bg***** -->
  <div class="main-banner video-banner">
   <video autoplay muted loop playsinline class="bg-video">
-    <source src="assets/videos/LOKOGOMA SITE UPDATE.mp4" type="video/mp4">
+    <source src="assets/videos/ttrvideo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
@@ -649,9 +655,9 @@ We develop some properties ourselves, we also partner with other trusted develop
                       <h2>Greenhaven Estate Karsana</h2>
                       <hr>
                       <ul>
-                        <li>Estate Size <span style="color: #f8f9fc;">185 m²</span></li>
-                        <li>Document Type <span style="color: #f8f9fc;">C of O</span></li>
-                        <li>Payment Plan <span style="color: #f8f9fc;">Flexible (6–12 months)</span></li>
+                        <li>Estate Size <span style="color: #f8f9fc;">15 Hectares</span></li>
+                        <li>Document Type <span style="color: #f8f9fc;">R of O</span></li>
+                        <li>Payment Plan <span style="color: #f8f9fc;">Flexible (3-6 months)</span></li>
                       </ul>
                       <div class="info-buttons">
                         <a href="#" class="btn-info gold"><i class="fa fa-download"></i> Download Layout</a>
@@ -662,7 +668,7 @@ We develop some properties ourselves, we also partner with other trusted develop
                   </div>
 
                   <div class="col-lg-6">
-                    <img src="assets/images/deal-01.jpg" alt="Apartment" class="img-fluid rounded shadow-sm">
+                    <img src="assets/images/high7.jpg" alt="Apartment" class="img-fluid rounded shadow-sm">
                   </div>
 
                   <div class="col-lg-3">
@@ -697,7 +703,7 @@ We develop some properties ourselves, we also partner with other trusted develop
                   </div>
 
                   <div class="col-lg-6">
-                    <img src="assets/images/deal-02.jpg" alt="Villa" class="img-fluid rounded shadow-sm">
+                    <img src="assets/images/high10.jpg" alt="Villa" class="img-fluid rounded shadow-sm">
                   </div>
 
                   <div class="col-lg-3">
@@ -731,7 +737,7 @@ We develop some properties ourselves, we also partner with other trusted develop
                   </div>
 
                   <div class="col-lg-6">
-                    <img src="assets/images/deal-03.jpg" alt="Penthouse" class="img-fluid rounded shadow-sm">
+                    <img src="assets/images/hutupolo.jpg" alt="Penthouse" class="img-fluid rounded shadow-sm">
                   </div>
 
                   <div class="col-lg-3">
@@ -900,7 +906,63 @@ We develop some properties ourselves, we also partner with other trusted develop
     referrerpolicy="no-referrer-when-downgrade">
   </iframe>
 </div>
-         
+</div>
+</div>
+</div>
+</div>
+</div>
+<!-- Footer -->
+<footer style="background-color: #001f3f; color: #ffffff; font-size: 14px; padding: 40px 20px 20px; text-align: center;">
+  <div style="max-width: 1100px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; gap: 40px; text-align: left;">
+
+    <!-- Logo and Description -->
+    <div style="flex: 1; min-width: 300px;">
+      <h3 style="font-size: 18px; margin-bottom: 10px; color: #c8aa62;">Top-tier Realty</h3>
+      <p style="margin: 0; color: #d0d8e0; line-height: 1.6;">
+       At Top-Tier realty, we make property investment and ownership a smooth and rewarding experience for our clients
+      </p>
+    </div>
+
+    <!-- Contact Details -->
+    <div style="flex: 1; min-width: 300px;">
+      <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Address</h4>
+      <p style="margin: 0 0 8px; color: #d0d8e0;">Abiding Grace Plaza, Apo, Gudu; Abuja.</p>
+
+      <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Email</h4>
+      <p style="margin: 0; color: #d0d8e0;">officialtoptierrealty@gmail.com</p>
+
+      <h4 style="font-size: 15px; margin-bottom: 4px; color: #c8aa62;">Phone</h4>
+      <p style="margin: 0; color: #d0d8e0;">+234-916-000-8309</p>
+      <p style="margin: 0; color: #d0d8e0;">+234-907-726-6555</p>
+      <p style="margin: 0; color: #d0d8e0;">+234-814-597-2225</p>
+      <p style="margin: 0; color: #d0d8e0;">+234-704-358-1877</p>
+    </div>
+
+    <!-- Social Links -->
+    <div style="flex: 1; min-width: 250px;">
+      <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Follow Us</h4>
+      <div style="display: flex; gap: 15px; margin-top: 5px;">
+        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-youtube"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Divider Line -->
+  <hr style="border: none; border-top: 1px solid rgba(255,255,255,0.1); margin: 25px auto 10px; width: 90%;">
+
+  <!-- Copyright Section -->
+  <div style="color: #d0d8e0; font-size: 13px; line-height: 1.4;">
+    <p style="margin: 0;">&copy; 2025 Top-Tier Realty. All rights reserved.</p>
+    <p style="margin: 2px 0 0;">Designed by <strong>Top-tier Realty Media</strong></p>
+  </div>
+</footer>
+     
+
+
 <style>
   .map-wrapper {
   width: 100%;
