--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ h2 {
  <!-- ***** video bg***** -->
  <div class="main-banner video-banner">
   <video autoplay muted loop playsinline class="bg-video">
-    <source src="assets/videos/ttrvideo.mp4" type="video/mp4">
+    <source src="assets/videos/ttrvid.mov" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
@@ -266,7 +266,7 @@ h2 {
 
 
 <!-- Our Story Banner -->
-<section class="our-story" style="background-color: #10344d; padding: 60px 20px;">
+<section class="our-story" style="background-color: #10344d; padding: 20px 10px;">
   <div class="container" style="
       display: flex;
       flex-wrap: wrap;
@@ -308,8 +308,8 @@ h2 {
         box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     ">
       <div class="story-text" style="text-align: justify; color: #10344d;">
-        <h2 style="color: #10344d; font-weight: 700; margin-bottom: 15px;">Our Story</h2>
-        <p>
+        <h2 style="color: #10344d; font-weight: 700; margin-bottom: 11px;">Our Story</h2>
+        <p style="font-size: 10px;">
          Top-Tier Realty was born from a powerful belief: real estate should be a trusted
           and stress-free experience not just a transaction.
           <br>
@@ -329,7 +329,7 @@ When you work with us, you gain a dedicated team committed to making your milest
         <hr>
        
       <h2 style="color: #10344d; font-weight: 700; margin-bottom: 15px;">Our promise</h2>
- <p>
+ <p style="font-size: 10px;">
 To deliver upscale value and service through every experience, empowering 
 our clients with confidence and peace of mind in every property decision.
         </p>
