--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ h2 {
  <!-- ***** video bg***** -->
  <div class="main-banner video-banner">
   <video autoplay muted loop playsinline class="bg-video">
-    <source src="assets/videos/ttrvid.mov" type="video/mp4">
+    <source src="assets/videos/ttrvid.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
