--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ h2 {
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="assets/images/toptierlogo.png" alt="Toptier Logo" style="height: 140px; width: 140px; margin-top: -30px;">
+                        <img src="assets/images/ttrlogo.png" alt="Toptier Logo" style="height: 140px; width: 140px; margin-top: -30px;">
                     </a>
                  
 
