--- a/index.html
+++ b/index.html
@@ -144,18 +144,23 @@ h2 {
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
-  <div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
+ <!-- ***** Image Preloader Start ***** -->
+<div id="js-preloader" class="image-preloader">
+  <div class="preloader-content">
+    <img src="assets/images/toptierpreloder.png" alt="Loading..." class="preloader-logo">
   </div>
-  <!-- ***** Preloader End ***** -->
+</div>
+
+<script>
+  window.addEventListener("load", function () {
+    const preloader = document.getElementById("js-preloader");
+    preloader.classList.add("fade-out");
+    setTimeout(() => { preloader.style.display = "none"; }, 600);
+  });
+</script>
+
+<!-- ***** Image Preloader End ***** -->
+
 
 <!-- Include Font Awesome in your <head> -->
 <link
@@ -181,18 +186,26 @@ h2 {
 
       <div class="col-lg-4 col-md-4">
         <ul class="social-links">
-          <li>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-          </li>
-          <li>
-            <a href="https://x.com/minthu" target="_blank"><i class="fab fa-x-twitter"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </li>
+        <li>
+    <a href="https://www.facebook.com/profile.php?id=61576613353029&mibextid=ZbWKwL" target="_blank" title="Facebook">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://x.com/top_tierrealty?t=NcOIc6vsba6OuGsv1dlH_w&s=09" target="_blank" title="X (Twitter)">
+      <i class="fab fa-x-twitter"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://www.tiktok.com/@officialtoptierrealty?_t=ZS-90Otipaq9k8&_r=1" target="_blank" title="TikTok">
+      <i class="fab fa-tiktok"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://www.instagram.com/officialtoptierrealty?igsh=c2o1aTJvZGpiMDE4" target="_blank" title="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </li>
         </ul>
       </div>
     </div>
@@ -223,9 +236,10 @@ h2 {
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                            <li>
-                            <a href="#">
-                        <i class="fa fa-car" style="color: #C8AA62;"></i> Book a free site visit
-                            </a>
+                            <a href="https://wa.me/2349160008309?text=Hello%20Top-Tier%20Team" target="_blank">
+  <i class="fa fa-car"  style="color: #C8AA62;"></i> Book a free site visit
+</a>
+
                         </li>
                     </ul>   
                     <a class='menu-trigger'>
@@ -253,12 +267,13 @@ h2 {
     <p class="fade-in delay">We offer upscale real estate services</p>
   </div>
 
-  <!-- Curved white shape under the video -->
-  <div class="curve-bottom">
-    <svg viewBox="0 0 1440 120" xmlns="http://www.w3.org/2000/svg">
-      <path fill="#ffffff" d="M0,0 C300,120 1140,120 1440,0 L1440,120 L0,120 Z"></path>
-    </svg>
-  </div>
+<!-- Curved white shape under the video -->
+<div class="curve-bottom">
+  <svg viewBox="0 0 1440 120" xmlns="http://www.w3.org/2000/svg">
+    <!-- One smooth wave (single wavelength) -->
+    <path fill="#ffffff" d="M0,60 C360,0 1080,120 1440,60 L1440,120 L0,120 Z"></path>
+  </svg>
+</div>
 </div>
 
 <!-- ***** video bg end***** -->
@@ -284,7 +299,7 @@ h2 {
         justify-content: center;
     ">
       <div style="
-          background: #fff;
+          background: #dedcda;
           border-radius: 15px;
           box-shadow: 0 4px 10px rgba(0,0,0,0.1);
           padding: 10px;
@@ -302,7 +317,7 @@ h2 {
     <!-- Text Side -->
     <div class="story-text-side" style="
         flex: 1 1 500px;
-        background: #fff;
+        background: #dedcda;
         padding: 30px 35px;
         border-radius: 15px;
         box-shadow: 0 4px 10px rgba(0,0,0,0.1);
@@ -880,6 +895,22 @@ We develop some properties ourselves, we also partner with other trusted develop
     </div>
   </div> -->
 
+  <!-- ===== Our Reliable Partners Section ===== -->
+<section class="partners-section">
+  <div class="container">
+    <h2 class="partners-heading">Our Reliable Partners</h2>
+    <div class="partners-logos">
+      <div class="partner">
+        <img src="assets/images/edinandpeoplelogo.png" alt="Partner 1">
+      </div>
+      <div class="partner">
+        <img src="assets/images/firstfruitlogo.png" alt="Partner 2">
+      </div>
+    </div>
+  </div>
+</section>
+
+
   <div class="contact section">
     <div class="container">
       <div class="row">
@@ -912,55 +943,58 @@ We develop some properties ourselves, we also partner with other trusted develop
 </div>
 </div>
 <!-- Footer -->
-<footer style="background-color: #001f3f; color: #ffffff; font-size: 14px; padding: 40px 20px 20px; text-align: center;">
-  <div style="max-width: 1100px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; gap: 40px; text-align: left;">
+<!-- Footer -->
+  <footer style="background-color: #001f3f; color: #ffffff; font-size: 14px; padding: 40px 20px 20px; text-align: center;">
+    <div style="max-width: 1100px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; gap: 40px; text-align: left;">
 
-    <!-- Logo and Description -->
-    <div style="flex: 1; min-width: 300px;">
-      <h3 style="font-size: 18px; margin-bottom: 10px; color: #c8aa62;">Top-tier Realty</h3>
-      <p style="margin: 0; color: #d0d8e0; line-height: 1.6;">
-       At Top-Tier realty, we make property investment and ownership a smooth and rewarding experience for our clients
-      </p>
-    </div>
+      <!-- Logo and Description -->
+      <div style="flex: 1; min-width: 300px;">
+        <h3 style="font-size: 18px; margin-bottom: 10px; color: #c8aa62;">Top-Tier Realty</h3>
+        <p style="margin: 0; color: #d0d8e0; line-height: 1.6;">
+          At Top-Tier realty, we make property investment and ownership a smooth and rewarding experience for our clients.
+        </p>
+      </div>
 
-    <!-- Contact Details -->
-    <div style="flex: 1; min-width: 300px;">
-      <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Address</h4>
-      <p style="margin: 0 0 8px; color: #d0d8e0;">Abiding Grace Plaza, Apo, Gudu; Abuja.</p>
+      <!-- Contact Details -->
+      <div style="flex: 1; min-width: 300px;">
+        <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Address</h4>
+        <p style="margin: 0 0 8px; color: #d0d8e0;">Abiding Grace Plaza, Apo, Gudu; Abuja.</p>
 
-      <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Email</h4>
-      <p style="margin: 0; color: #d0d8e0;">officialtoptierrealty@gmail.com</p>
+        <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Email</h4>
+        <p style="margin: 0; color: #d0d8e0;">officialtoptierrealty@gmail.com</p>
 
-      <h4 style="font-size: 15px; margin-bottom: 4px; color: #c8aa62;">Phone</h4>
-      <p style="margin: 0; color: #d0d8e0;">+234-916-000-8309</p>
-      <p style="margin: 0; color: #d0d8e0;">+234-907-726-6555</p>
-      <p style="margin: 0; color: #d0d8e0;">+234-814-597-2225</p>
-      <p style="margin: 0; color: #d0d8e0;">+234-704-358-1877</p>
-    </div>
+        <h4 style="font-size: 15px; margin-bottom: 4px; color: #c8aa62;">Phone</h4>
+        <p style="margin: 0; color: #d0d8e0;">+234-916-000-8309</p>
+        <p style="margin: 0; color: #d0d8e0;">+234-907-726-6555</p>
+        <p style="margin: 0; color: #d0d8e0;">+234-814-597-2225</p>
+        <p style="margin: 0; color: #d0d8e0;">+234-704-358-1877</p>
+      </div>
 
-    <!-- Social Links -->
-    <div style="flex: 1; min-width: 250px;">
-      <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Follow Us</h4>
-      <div style="display: flex; gap: 15px; margin-top: 5px;">
-        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-tiktok"></i></a>
-        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-linkedin-in"></i></a>
-        <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-youtube"></i></a>
+      <!-- Social Links -->
+      <div style="flex: 1; min-width: 250px;">
+        <h4 style="font-size: 15px; margin-bottom: 6px; color: #c8aa62;">Follow Us</h4>
+        <div style="display: flex; gap: 15px; margin-top: 5px;">
+          <a href="https://www.facebook.com/profile.php?id=61576613353029&mibextid=ZbWKwL" target="_blank" title="Facebook"style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-facebook-f"></i></a>
+          <a  href="https://www.instagram.com/officialtoptierrealty?igsh=c2o1aTJvZGpiMDE4" target="_blank" title="Instagram" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.tiktok.com/@officialtoptierrealty?_t=ZS-90Otipaq9k8&_r=1" target="_blank" title="TikTok"style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-tiktok"></i></a>
+<a href="https://x.com/top_tierrealty?t=NcOIc6vsba6OuGsv1dlH_w&s=09"
+   target="_blank"
+   style="color: #ffffff; font-size: 18px;">
+   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" width="18" height="18" fill="currentColor">
+     <path d="M714.2 519.9 1160.9 0h-105.2L667.3 442.2 398.6 0H0l468.1 728.2L0 1226.9h105.2l409.1-466.4 287.8 466.4h398.6L714.2 519.9zM575.8 689.5l-47.4-74.2L143.3 79.8h181.2l305.4 478.7 47.4 74.2 403.9 634.4H899.9L575.8 689.5z"/>
+   </svg>
+</a>
+          <!-- <a href="#" style="color: #ffffff; font-size: 18px;"><i class="fa-brands fa-youtube"></i></a> -->
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Divider Line -->
-  <hr style="border: none; border-top: 1px solid rgba(255,255,255,0.1); margin: 25px auto 10px; width: 90%;">
-
-  <!-- Copyright Section -->
-  <div style="color: #d0d8e0; font-size: 13px; line-height: 1.4;">
-    <p style="margin: 0;">&copy; 2025 Top-Tier Realty. All rights reserved.</p>
-    <p style="margin: 2px 0 0;">Designed by <strong>Top-tier Realty Media</strong></p>
-  </div>
-</footer>
-     
+    <hr style="border: none; border-top: 1px solid rgba(255,255,255,0.1); margin: 25px auto 10px; width: 90%;">
+    <div style="color: #d0d8e0; font-size: 13px; line-height: 1.4;">
+      <p style="margin: 0;">&copy; 2025 Top-Tier Realty. All rights reserved.</p>
+      <p style="margin: 2px 0 0;">Designed by <strong>TTR Media</strong></p>
+    </div>
+  </footer>
 
 
 <style>
